[package]
name = "rose"
version = "2.6.1"
authors = ["geremachek <mrender2005@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
factorial = "0.2.1"

[dependencies.clap]
version = "2.33.3"
default-features = false
